e-xml-utils: Enable parse of huge XML files
eds 3.46.0 is failing to refresh contacts for CardDAV address book from a NextCloud server. When performing a refresh of the address book in evolution, the following errors are seen in the journal:
Oct 26 23:07:00 sable evolution-addressbook-factory[1967]: data.xml:132360: parser error : xmlSAX2Characters: huge text node
Oct 26 23:07:00 sable evolution-addressbook-factory[1967]: QZvSINGAUpNGOVuTZr2c0lTVVtBNs/FBvpnMeP/GecACWLaw4u3GjLU4nU44n47ozmeIGaDY+J
This is causing the refresh to fail, leading to the local copy of the address book missing contacts that are present on the server.
The string above is present in a VCARD export of the same contacts from the NextCloud server as the value of a PHOTO;ENCODING=B;TYPE=PNG;VALUE=BINARY
field. Some contacts have decent quality photos, the string above is from a photo that is 688KB large (encoded).
The account is configured using GOA.
While 688K might seem large to an XML parser, it's not large for a photo, especially one that is encoded using Base64. Certainly no other devices I sync with the same contacts and NextCloud server have a problem with them.
Is it possible to adjust the SAX parser to not have such small text node size limits?