I#431 - e-xml-utils: Enable parse of huge XML files

Such can be received through CalDAV or CardDAV, when the components
have attachments or large images.

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/431